unpackaged/main/default/objects/Grant_Contact_Roles__c/Grant_Contact_Roles__c.object-meta.xml
<CustomObject>
    <label>Grant Contact Role</label>
    <nameField>
        <displayFormat>GCR-{0000000}</displayFormat>
        <label>Grant Contact Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>