unpackaged/main/default/objects/Grant_Contact_Roles__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Grant Contact Roles</relationshipLabel>
    <relationshipName>Grant_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>