unpackaged/main/default/objects/Grant_Contact_Roles__c/fields/Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Grant Contact Roles</relationshipLabel>
    <relationshipName>Grant_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>