unpackaged/main/default/objects/Grant_Contact_Roles__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <label>Person</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grant Contact Roles</relationshipLabel>
    <relationshipName>Grant_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>