unpackaged/main/default/objects/Grant_Contact_Roles__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant Contact</fullName>
            </value>
            <value>
                <fullName>Head of Organization</fullName>
            </value>
            <value>
                <fullName>Board Chair</fullName>
            </value>
            <value>
                <fullName>Payee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Finance Representative</fullName>
            </value>
            <value>
                <fullName>Programs Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>